--- a/links httml/paginademusicasl.html
+++ b/links httml/paginademusicasl.html
@@ -17,6 +17,6 @@
     <li>2023 - Mc Hariel</li>
     <img src="/links httml/mc-hariel-1618006735948_v2_600x450.jpg.webp" alt="Mc hariel" width="20%">
   </ul>
-  <a href="index.html"></a>
+  <a href="links.html">Voltar para a Página Inicial</a>
 </body>
 </html>
