--- a/links httml/paginadeviloes.html
+++ b/links httml/paginadeviloes.html
@@ -8,13 +8,22 @@
   <h1>Meus Vilões Favoritos</h1>
   <ul>
     <li>Coringa</li>
-    <p>O Coringa é um dos vilões mais icônicos dos quadrinhos, principalmente conhecido como o principal inimigo do Batman no universo da DC Comics. Caracteriza-se por sua aparência marcante — cabelo verde, pele branca e um sorriso vermelho e perturbador — e por sua personalidade caótica, imprevisível e sádica. Diferentes versões do personagem o retratam como um criminoso insano, um anarquista ou até um gênio do crime, mas sempre com uma obsessão pelo Batman e pelo caos. Sua origem varia conforme a história, sendo a mais famosa a de um comediante fracassado que enlouquece após um acidente químico.
-</p>
+    
     <img src="/links httml/coringa.avif" alt="coringa" width="20%">
+    <p>O Coringa é um dos vilões mais icônicos dos quadrinhos, principalmente conhecido como o principal inimigo do Batman no universo da DC Comics. <br> Caracteriza-se por sua aparência marcante — cabelo verde, pele branca e um sorriso vermelho e perturbador — e por sua personalidade caótica, imprevisível e sádica. Diferentes versões do personagem o retratam como um criminoso insano, um anarquista ou até um gênio do crime, mas sempre com uma obsessão pelo Batman e pelo caos. Sua origem varia conforme a história, sendo a mais famosa a de um comediante fracassado que enlouquece após um acidente químico.
     <li>Thanos</li>
-    <img src="/links httml/thanos.jpg" alt="thanos" width="20%">
+    <img src="/links httml/thanos.jpg" alt="thanos" width="10%">
+    <p>
+        Thanos é um dos vilões mais poderosos e icônicos do universo Marvel. Ele é um titã louco obcecado por equilíbrio universal, acreditando que eliminar metade de toda a vida é a única maneira de evitar a destruição causada pela superpopulação e escassez de recursos. Em busca desse objetivo, ele reúne as Joias do Infinito — artefatos cósmicos que, juntos, lhe concedem poder absoluto. Thanos é conhecido por sua inteligência estratégica, força sobre-humana e determinação implacável. Seu papel mais marcante foi nos filmes Vingadores: Guerra Infinita e Ultimato, onde se tornou uma ameaça existencial para todo o universo.
+
+    </p>
     <li>Darth Vader</li>
+    <img src="/links httml/darth vaider.jfif" alt="darth vaider" width="20%">
+    <p>
+      Darth Vader é um dos personagens mais icônicos da saga Star Wars. Originalmente conhecido como Anakin Skywalker, ele era um talentoso Cavaleiro Jedi que acabou sendo corrompido pelo lado sombrio da Força, tornando-se o braço direito do Imperador Palpatine no Império Galáctico. Com sua armadura negra, respiração mecânica e presença intimidadora, Vader é temido por seus inimigos e respeitado por seus aliados. Apesar de suas ações cruéis, ele tem um passado trágico e complexo, marcado por amor, perda e redenção.
+    </p>
+    i
   </ul>
-  <a href="index.html">Voltar para a Página Inicial</a>
+  <a href="links.html">Voltar para a Página Inicial</a>
 </body>
 </html>
