--- a/links httml/links.html
+++ b/links httml/links.html
@@ -12,6 +12,7 @@
     <li><a href="paginademusicasl.html">Músicas Favoritas</a></li>
     <li><a href="paginadeviloes.html">Vilões Favoritos</a></li>
     <li><a href="paginadefilmes.html">Filmes/Séries Favoritos</a></li>
+    <img src="/links httml/o-que-é-ling-prog.jpg" alt="programação" width="50%">
   </ul>
 </body>
 </html>
