--- a/links httml/links.html
+++ b/links httml/links.html
@@ -9,9 +9,9 @@
   <h1>Bem-vindo ao meu site de Musicas,Filmes e vilões favoritos!</h1>
   <p>Escolha uma das páginas para navegar🔑:</p>
   <ul>
-    <li><a href="paginademusicasl.html">Músicas Favoritas</a></li>
-    <li><a href="paginadeviloes.html">Vilões Favoritos</a></li>
-    <li><a href="paginadefilmes.html">Filmes/Séries Favoritos</a></li>
+    <li><a href="paginademusicasl.html" target="_blank">Músicas Favoritas</a></li>
+    <li><a href="paginadeviloes.html" target="_blank">Vilões Favoritos</a></li>
+    <li><a href="paginadefilmes.html" target="_blank">Filmes/Séries Favoritos</a></li>
     <img src="/links httml/o-que-é-ling-prog.jpg" alt="programação" width="50%">
   </ul>
 </body>
